--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>The Monty Hall Problem</title>
 </head>
 <body>
-    <div class="goat">
-    <div>
+    
+    <div class="goat"></div>
+    <div class="sportscar"><div>
 
 </body>
 </html>
