--- a/index.html
+++ b/index.html
@@ -4,28 +4,17 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="body">
 		<header>
 			<h1>welcome to Montyhall game</h1>
 		</header>
 		<div id="instructions" class="instructions">
-			<div id="row1" class="row1">
-			Please Select a door
-			</div>
+			<div id="row1" class="row1">Please Select a door</div>
 			<div id="d1">You selected door1</div>
 			<div id="d2">You selected door2</div>
 			<div id="d3">You selected door3</div>
 			<div id="row2" class="row2">
-				
-
-<p>Ok, I'm opening a door</p>
-
-
-				
-
-<p>Do you want to switch?</p>
-
-
+				<p>Ok, I'm opening a door</p>
+				<p>Do you want to switch?</p>
 				<div class="buttons">
 					<button id="btn-1">Yes</button>
 					<button id="btn-2">No</button>
@@ -35,122 +24,36 @@
 
 		<main class="door-row">
 			<img id="door1" class="door"
-				src="./door.png" alt="door">
+				src="images/door.jpg" alt="Door 1">
 			<img id="door2" class="door"
-				src="./door.png" alt="door">
+				src="images/door.jpg" alt="Door 2">
 			<img id="door3" class="door"
-				src="./door.png" alt="door">
+				src="images/door.jpg" alt="Door 3">
 
 		</main>
-	</div>
-	<div id="switchAndWin" class="result">
-		
 
-<p>Congratulations!!!!!</p>
-
-
-		
-
-<p>You made the right choice by switching</p>
-
-
-		
-
-<p>By switching, you increased your
-		probability of winning to 0.67</p>
-
-
-		<div class="links">
-			<button><a href=
-"https://en.wikipedia.org/wiki/Monty_Hall_problem"
-					target="_blank">
-			Know more</a>
-			</button>
-			<button><a href="index.html">
-					Play again
-					</a></button>
+		<div id="switchAndWin" class="result">
+			<p>Congratulations - you made the right choice by switching to another door!</p>
+			<p>By switching, you increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
 		</div>
-	</div>
-	<div id="switchAndLose" class="result">
-		
-
-<p>You Lost!!!</p>
-
-
-		
-
-<p>The chances of you winning was 67% since you
-			switched,yet you still lost </p>
-
-
-		
-
-<p>Play again to redefine your luck</p>
-
-
-		<div class="links">
-			<button><a href=
-"https://en.wikipedia.org/wiki/Monty_Hall_problem"
-					target="_blank">
-			Know more</a>
-			</button>
-			<button><a href="index.html">Play again</a></button>
+	
+		<div id="switchAndLose" class="result">
+			<p>Commiserations - the chances of you winning was 0.67 / two-thirds / 66.6666666% since you switched to another door, 
+				but unfortunately still lost. Bad luck.</p>
+			<p>Play again to redefine your luck</p>
 		</div>
-	</div>
-	<div id="NoSwitchAndWin" class="result">
-		
-
-<p>Congratulations!!!!!</p>
-
-
-		
-
-<p>You are a very lucky person</p>
-
-
-		
-
-<p>The probability of you winning was only 0.33 because
-		you didn't switch,yet you still won</p>
-
-
-		<div class="links">
-			<button><a href=
-"https://en.wikipedia.org/wiki/Monty_Hall_problem"
-					target="_blank">
-			Know more</a>
-			</button>
-			<button><a href="index.html">
-			Play again</a>
-			</button>
+	
+		<div id="NoSwitchAndWin" class="result">
+			<p>Congratulations - you are a very lucky person!</p>
+			<p>The probability of you winning was only 0.33 because you didn't switch to another door ,yet you still won.
+			If you had switched doors, you would've increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
 		</div>
-	</div>
-	<div id="NoSwitchAndLose" class="result">
-		
 
-<p>You Lost!!!!</p>
-
-
-		
-
-<p>Since you didn't switch, your chances
-			of winning was only 33%</p>
-
-
-		
-
-<p>Play again to redefine your luck</p>
-
-
-		<div class="links">
-			<button><a href=
-"https://en.wikipedia.org/wiki/Monty_Hall_problem"
-					target="_blank">
-			Know more</a>
-			</button>
-			<button><a href="index.html">Play again</a></button>
+		<div id="NoSwitchAndLose" class="result">
+			<p>You Lost - since you didn't switch, your chances of winning were only 33%</p>
+			<p>Play again to redefine your luck</p>
 		</div>
-	</div>
+		
 	<script src="scripts/script.js"></script>
 </body>
 </html>
