--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div id="body">
 		<header>
 			<h1>welcome to Montyhall game</h1>
 		</header>
@@ -53,7 +54,9 @@
 			<p>You Lost - since you didn't switch, your chances of winning were only 33%</p>
 			<p>Play again to redefine your luck</p>
 		</div>
-		
+
+	</div>
+
 	<script src="scripts/script.js"></script>
 </body>
 </html>
