--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div id="body">
 		<header>
-			<h1>welcome to Montyhall game</h1>
+			<h1>Welcome to Monty Hall Problem</h1>
 		</header>
 		<div id="instructions" class="instructions">
 			<div id="row1" class="row1">Please Select a door</div>
@@ -14,7 +14,7 @@
 			<div id="d2">You selected door2</div>
 			<div id="d3">You selected door3</div>
 			<div id="row2" class="row2">
-				<p>Ok, I'm opening a door</p>
+				<p>Ok, I'm opening another door</p>
 				<p>Do you want to switch?</p>
 				<div class="buttons">
 					<button id="btn-1">Yes</button>
