--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
 
 		</main>
 
-		<div id="switchAndWin" class="result">
+		<div id="SwitchAndWin" class="result" style="display: none">
 			<p>Congratulations - you made the right choice by switching to another door!</p>
 			<p>By switching, you increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
 		</div>
 	
-		<div id="switchAndLose" class="result">
+		<div id="SwitchAndLose" class="result" style="display: none">
 			<p>Commiserations - the chances of you winning was 0.67 / two-thirds / 66.6666666% since you switched to another door, 
 				but unfortunately still lost. Bad luck.</p>
 			<p>Play again to redefine your luck</p>
 		</div>
 	
-		<div id="NoSwitchAndWin" class="result">
+		<div id="NoSwitchAndWin" class="result" style="display: none">
 			<p>Congratulations - you are a very lucky person!</p>
 			<p>The probability of you winning was only 0.33 because you didn't switch to another door ,yet you still won.
 			If you had switched doors, you would've increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
 		</div>
 
-		<div id="NoSwitchAndLose" class="result">
+		<div id="NoSwitchAndLose" class="result" style="display: none">
 			<p>You Lost - since you didn't switch, your chances of winning were only 33%</p>
 			<p>Play again to redefine your luck</p>
 		</div>
