--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<head>
-	<title>MontyHall</title>
-	<link rel="stylesheet" href="css/style.css">
-</head>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+		<link rel="stylesheet" href="css/style.css">
+		<title>The Monty Hall Problem</title>
+	</head>
 <body>
 	<div id="body">
 		<header>
-			<h1>welcome to Montyhall game</h1>
+			<h1>Welcome to Monty Hall game</h1>
 		</header>
 		<div id="instructions" class="instructions">
 			<div id="row1" class="row1">Please Select a door</div>
@@ -14,8 +18,8 @@
 			<div id="d2">You selected door2</div>
 			<div id="d3">You selected door3</div>
 			<div id="row2" class="row2">
-				<p>Ok, I'm opening a door</p>
-				<p>Do you want to switch?</p>
+				<p>I've opened another door instead. As you can see, there is a goat.</p>
+				<p>Do you want to switch to another door?</p>
 				<div class="buttons">
 					<button id="btn-1">Yes</button>
 					<button id="btn-2">No</button>
@@ -36,6 +40,7 @@
 		<div id="SwitchAndWin" class="result" style="display: none">
 			<p>Congratulations - you made the right choice by switching to another door!</p>
 			<p>By switching, you increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
+			<p>A sportscar is yours.</p>
 		</div>
 	
 		<div id="SwitchAndLose" class="result" style="display: none">
@@ -48,6 +53,7 @@
 			<p>Congratulations - you are a very lucky person!</p>
 			<p>The probability of you winning was only 0.33 because you didn't switch to another door ,yet you still won.
 			If you had switched doors, you would've increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
+			<p> A sportscar is yours.</p>
 		</div>
 
 		<div id="NoSwitchAndLose" class="result" style="display: none">
