--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto&display=swap" rel="stylesheet">
-		<title>The Monty Hall Problem</title>
-	</head>
+<head>
+	<title>MontyHall</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 	<div id="body">
 		<header>
-			<h1>Welcome to the Monty Hall Problem</h1>
+			<h1>welcome to Montyhall game</h1>
 		</header>
+
+		<div class="displayResult">
+		</div>
 		<div id="instructions" class="instructions">
-			<div id="row1" class="row1">Please Select a door</div>
+			<div id="row1" class="row1">
+			Please Select a door
+			</div>
 			<div id="d1">You selected door1</div>
 			<div id="d2">You selected door2</div>
 			<div id="d3">You selected door3</div>
 			<div id="row2" class="row2">
-				<p>Thank you for choosing your door. 
-					I've opened another door instead. As you can see, there is a goat.</p>
-				<p>Do you want to switch to another door?</p>
+				
+
+<p>Ok, I'm opening a door</p>
+
+
+				
+
+<p>Do you want to switch?</p>
+
+
 				<div class="buttons">
 					<button id="btn-1">Yes</button>
 					<button id="btn-2">No</button>
@@ -31,49 +36,105 @@
 			</div>
 		</div>
 
-		<div id="resetbutton">
-			<div id="switchandwinchoice" class="result" style="display: none">
-				<p>Congratulations - you made the right choice by switching to another door!</p>
-				<p>By switching, you increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
-				<p>A sportscar is yours.</p>
-				<button id="submit-switchandwin">Play again to redefine your luck</button>
-			</div>
-	
-			<div id="switchandlosechoice" class="result" style="display: none">
-				<p>Commiserations - the chances of you winning were 0.67 / two-thirds / 66.6666666% since you switched to another door, 
-				but unfortunately, you still lost. Bad luck.</p>
-				<button id="submit-switchandlose">Play again to redefine your luck</button>
-			</div>
-	
-			<div id="noswitchandwinchoice" class="result" style="display: none">
-				<p>Congratulations - you are a very lucky person!</p>
-				<p>The probability of you winning was only 0.33 because you didn't switch to another door, yet you still won.
-				If you had switched doors, you would've increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
-				<button id="submit-noswitchandwin">Play again to redefine your luck</button>
-			</div>
-
-			<div id="noswitchandlosechoice" class="result" style="display: none">
-				<p>You lost - since you didn't switch, your chances of winning were only 33%.</p>
-				<button id="submit-noswitchandlose">Play again to redefine your luck</button>
-			</div>
-		</div>
-
-		<p id="win-lose-counter-display"></p>
-
 		<main class="door-row">
 			<img id="door1" class="door"
-				src="images/door.jpg" alt="Door 1">
+				src="images/door.jpg" alt="door">
 			<img id="door2" class="door"
-				src="images/door.jpg" alt="Door 2">
+				src="images/door.jpg" alt="door">
 			<img id="door3" class="door"
-				src="images/door.jpg" alt="Door 3">
+				src="images/door.jpg" alt="door">
 
 		</main>
+	</div>
+	<div id="switchAndWin" class="result">
+		
+
+<p>Congratulations!!!!!</p>
+
 
 		
-	</div>
 
-	<script src="scripts/script.js"></script>
+<p>You made the right choice by switching</p>
+
+
+		
+
+<p>
+	By switching, you increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
+
+
+		<div class="links">
+		
+			<button><a href="index.html">
+					Play again
+					</a></button>
+		</div>
+	</div>
+	<div id="switchAndLose" class="result">
+		
+
+<p>You Lost!!!</p>
+
+
+		
+
+<p>Commiserations - the chances of you winning was 
+	0.67 / two-thirds / 66.6666666% since you switched to another door, but unfortunately you still lost. 
+  Bad luck. </p>
+
+
+		
+
+<p>Play again to redefine your luck</p>
+
+
+		<div class="links">
+			
+			<button><a href="index.html">Play again</a></button>
+		</div>
+	</div>
+	<div id="NoSwitchAndWin" class="result">
+		
+
+<p>Congratulations - you are a very lucky person!</p>
+
+
+<p>
+	The probability of you winning was only 0.33 because you didn't switch to another door, yet you still won.
+	If you had switched doors, you would've increased your probability 
+	of winning to 0.67 / two-thirds / 66.6666666%.</p>
+
+
+		<div class="links">
+			
+			<button><a href="index.html">
+			Play again</a>
+			</button>
+		</div>
+	</div>
+	<div id="NoSwitchAndLose" class="result">
+		
+
+<p>You Lost</p>
+
+
+		
+
+<p>Since you didn't switch, your chances of winning were only 33%.
+	Play again to redefine your luck.</p>
+
+
+		
+
+<p>Play again to redefine your luck</p>
+
+
+		<div class="links">
+			
+			<button><a href="index.html">Play again</a></button>
+		</div>
+	</div>
+	<script src="scripts/script.js" async defer></script>
 	<script src="scripts/localstorage.js"></script>
 </body>
 </html>
