--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div id="body">
 		<header>
-			<h1>welcome to Montyhall game</h1>
+			<h1>Welcome to The Monty Hall Problem</h1>
 		</header>
 
 		<div class="displayResult">
@@ -21,12 +21,9 @@
 			<div id="row2" class="row2">
 				
 
-<p>Ok, I'm opening a door</p>
+			<p>Ok, I'm opening a door</p>
 
-
-				
-
-<p>Do you want to switch?</p>
+			<p>Do you want to switch?</p>
 
 
 				<div class="buttons">
@@ -49,15 +46,10 @@
 	<div id="switchAndWin" class="result">
 		
 
-<p>Congratulations!!!!!</p>
+		<p>Congratulations!!!!!</p>
 
+		<p>You made the right choice by switching</p>
 
-		
-
-<p>You made the right choice by switching</p>
-
-
-		
 
 <p>
 	By switching, you increased your probability of winning to 0.67 / two-thirds / 66.6666666%.</p>
